--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch A Sketch!</title>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Etch-A-Sketch!</title>
 </head>
 <body>
-    
+    <h1>Etch-A-Sketch</h1>
+    <div id="grid"></div>
+    <script src="script.js"></script>
+    <script>
+        createGridDivs(16);
+    </script>
 </body>
 </html>
